Fix: Hibernate auto para Docker, password por defecto en variables de entorno y Java 21